# fosi

./: .gitignore  .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: linux-build.yml  osx-build.yml  windows-build.yml
art/: fosi.icns  general_bmp.cpp  general_bmp.h
resources/: create_slbl.fbp  plint.fbp  profileview_dlg.fbp
resources/uml_plint/plint/: 128077  128077.bodies  128077.diagram  128205  128333  128333.bodies  128461.bodies  128845.bodies  129229.bodies  129613.bodies  129741.bodies  129869.bodies  129997.bodies  130381.bodies  130637.bodies  130893.bodies  131021.bodies  131277.bodies  131405.bodies  131661.bodies  131917.bodies  134561  134561.bodies  134689  134817.bodies  134945.bodies  135329.bodies  135713.bodies  136097.bodies  136225.bodies  136353.bodies  136481.bodies  136609.bodies  136993.bodies  137249.bodies  137505.bodies  137633.bodies  137889.bodies  138017.bodies  138273.bodies  (+4 more)
src/: Excel.h  accelerators.cpp  accelerators.h  app.cpp  app.h  createslbl_dlg.cpp  createslbl_dlg.h  frame.cpp  frame.h  frameabout.cpp  frameabout.h  framemain.cpp  framemain.h  log.h  plint_dlg.cpp  plint_dlg.h  plintoperation.cpp  plintoperation.h  plinttool.cpp  plinttool.h  plintvieweroverlay.cpp  plintvieweroverlay.h  preference_dlg.cpp  preference_dlg.h  preferencepanel.cpp  preferencepanel.h  profile_dlg.cpp  profile_dlg.h  profileview_dlg.cpp  profileview_dlg.h  resource.rc  toolbarbitmaps.cpp  toolbarbitmaps.h  update.cpp  update.h
src/core/: demutil.h  demutilfns.cpp  demutilopts.cpp  demutilopts.h  wildmagic.cpp
test/src/: test_plint.h
